--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SocialLogin</string>
+    <string name="facebook_app_id">340107277216651</string>
+    <string name="fb_login_protocol_scheme">fb340107277216651</string>
+
 </resources>
