--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">SocialLogin</string>
     <string name="facebook_app_id">340107277216651</string>
     <string name="fb_login_protocol_scheme">fb340107277216651</string>
+    <string name="loading">Loading&#8230;</string>
 
 </resources>
